--- a/23_Time-Series-Prediction.ipynb
+++ b/23_Time-Series-Prediction.ipynb
@@ -17,13 +17,10 @@
    "source": [
     "## 개요\n",
     "\n",
-    "This tutorial tries to predict the future weather of a city using weather-data from several other cities.\n",
     "이 튜토리얼은 복수의 여러 도시의 기후 정보를 이용하여 한 도시의 미래 날씨 예보를 시도합니다.\n",
     "\n",
-    "Because we will be working with sequences of arbitrary length, we will use a Recurrent Neural Network (RNN).\n",
     "우리는 임의의 길이를 가진 일련의 데이터로 작업 할 것이기 때문에 RNN (Recurrent Neural Network)을 사용할 것입니다.\n",
     "\n",
-    "You should be familiar with TensorFlow and Keras in general, see Tutorials #01 and #03-C, and the basics of Recurrent Neural Networks as explained in Tutorial #20.\n",
     "아래의 내용을 이해하기 위해서는 TensorFlow와 Keras에 익숙해야하며, 튜토리얼 #01과 #03-C, 튜토리얼 #20에서 설명되어 있는 RNN의 기본 사항을 참고하면 좋습니다."
    ]
   },
@@ -33,10 +30,10 @@
    "source": [
     "## 위치\n",
     "\n",
-    "여기에서는 1980년~2018년까지의 덴마크에 있는 다섯개 도시의 기후 정보를 사용합니다. [Denmark](https://en.wikipedia.org/wiki/Denmark):\n",
+    "여기에서는 1980년~2018년까지의 덴마크 [Denmark](https://en.wikipedia.org/wiki/Denmark)에 있는 다섯개 도시의 기후 정보를 사용합니다:\n",
     "\n",
-    "* **[Aalborg](https://en.wikipedia.org/wiki/Aalborg)** 이곳의 기후 정보는 실제로 공군기지로 부터 가져온 것으로 또한 [The Hunter Corps (Jægerkorps)](https://en.wikipedia.org/wiki/Jaeger_Corps_(Denmark)의 본거지 이기도 합니다.\n",
-    "* **[Aarhus](https://en.wikipedia.org/wiki/Aarhus)** is the city where 이 도시는 [C++ 발명자-비얀 스트롭스트룹](https://en.wikipedia.org/wiki/Bjarne_Stroustrup)가 연구했고 [Google V8 JavaScript Engine](https://en.wikipedia.org/wiki/Chrome_V8)이 개발된 곳 입니다.\n",
+    "* **[Aalborg](https://en.wikipedia.org/wiki/Aalborg)** 이곳의 기후 정보는 실제로 공군기지에서 얻게되는데, 여기는 [The Hunter Corps (Jægerkorps)](https://en.wikipedia.org/wiki/Jaeger_Corps_(Denmark)의 본거지 이기도 합니다.\n",
+    "* **[Aarhus](https://en.wikipedia.org/wiki/Aarhus)** 이 도시는 [C++ 발명자-비얀 스트롭스트룹](https://en.wikipedia.org/wiki/Bjarne_Stroustrup)가 연구했고 [Google V8 JavaScript Engine](https://en.wikipedia.org/wiki/Chrome_V8)이 개발된 곳 입니다.\n",
     "* **[Esbjerg](https://en.wikipedia.org/wiki/Esbjerg)** 은 거대한 낚시 항구를 가지고 있습니다.\n",
     "* **[Odense](https://en.wikipedia.org/wiki/Odense)** 은 동화작가인 안데르센_[H. C. Andersen](https://en.wikipedia.org/wiki/Hans_Christian_Andersen)이 태어난 도시입니다.\n",
     "* **[Roskilde](https://en.wikipedia.org/wiki/Roskilde)** 에는 덴마크 왕가의 무덤이 있는 오래된 성당이 있습니다."
@@ -66,13 +63,9 @@
    "source": [
     "## 흐름도\n",
     "\n",
-    "In this tutorial, we are trying to predict the weather for the Danish city \"Odense\" 24 hours into the future, given the current and past weather-data from 5 cities (although the flowchart below only shows 2 cities).\n",
+    "이 튜토리얼에서는 5개 도시의 현재 및 과거 기상 데이터를 바탕으로 향후 24시간 동안 덴마크 \"Odense\"지역 날씨를 예측하려고 합니다 (아래의 순서도는 2개 도시 만 표시 함).\n",
     "\n",
-    "We use a Recurrent Neural Network (RNN) because it can work on sequences of arbitrary length. During training we will use sub-sequences of 1344 data-points (8 weeks) from the training-set, with each data-point or observation having 20 input-signals for the temperature, pressure, etc. for each of the 5 cities. We then want to train the neural network so it outputs the 3 signals for tomorrow's temperature, pressure and wind-speed.\n",
-    "\n",
-    "이 튜토리얼에서는 5개 도시의 현재 및 과거 기상 데이터를 바탕으로 향후 24시간 동안 덴마크 \"Odense\"날씨를 예측하려고 합니다 (아래의 순서도는 2개 도시 만 표시 함).\n",
-    "\n",
-    "우리는 임의의 길이를 가진 일련의 데이터로 작업을 해야 하기 때문에 RNN (Recurrent Neural Network)을 사용합니다. 학습 중 우리는 5 개 도시 각각에 대해 온도, 압력 등에 대한 20개의 입력 신호가 있는 각 데이터 포인트 또는 관측값이 있는 학습 세트에서 1344 데이터 포인트 (8주 = 24 x 7 X 8)의 하위 시퀀스를 사용합니다. 우리는 신경 망을 학습시켜서 내일의 온도, 압력 및 풍속에 대한 3 가지 신호를 출력하도록 만들 것 입니다."
+    "우리는 임의의 길이를 가진 일련의 데이터로 작업을 해야 하기 때문에 RNN (Recurrent Neural Network)을 사용합니다. 학습 중 우리는 5개 도시 각각에 대해 온도, 압력 등에 대한 20개의 입력 신호가 있는 각 데이터 포인트 또는 관측값이 있는 학습 세트에서 1344데이터 포인트 (8주 = 24 x 7 X 8)의 하위 시퀀스를 사용합니다. 우리는 신경 망을 학습시켜서 내일의 온도, 압력 및 풍속에 대한 3가지 신호를 출력하도록 만들 것 입니다."
    ]
   },
   {
@@ -2199,7 +2192,6 @@
    "source": [
     "## 순환 신경망(RNN) 만들기\n",
     "\n",
-    "We are now ready to create the Recurrent Neural Network (RNN). We will use the Keras API for this because of its simplicity. See Tutorial #03-C for a tutorial on Keras and Tutorial #20 for more information on Recurrent Neural Networks.\n",
     "이제 우리는 RNN (Recurrent Neural Network)을 만들 준비가 되었습니다. Keras API는 사용법이 매우 간단하기 때문에 Keras로 구현하도록 하겠습니다. 순환 신경망에 대한 더 자세한 정보는 Keras 튜토리얼의 튜토리얼 #03-C와 튜토리얼 #20을 참조하십시오."
    ]
   },
@@ -2344,7 +2336,7 @@
    "source": [
     "### 모델 컴파일\n",
     "\n",
-    "이것은 우리가 사용할 최적화방법 및 시작 학습 속도입니다."
+    "이것은 우리가 사용할 최적화방법 및 시작 학습률 입니다."
    ]
   },
   {
@@ -2542,8 +2534,7 @@
    "source": [
     "### 체크포인트 읽어들이기\n",
     "\n",
-    "Because we use early-stopping when training the model, it is possible that the model's performance has worsened on the test-set for several epochs before training was stopped. We therefore reload the last saved checkpoint, which should have the best performance on the test-set.\n",
-    "모델을 훈련 할 때 조기 중단(early-stopping)를 사용하기 때문에 훈련이 중단되기 전에 여러 에포크에 대한 테스트 세트에서 모델의 성능이 악화되었을 가능성이 있습니다. 따라서 우리는 마지막으로 저장된 체크포인트를 다시 로드 합니다. 이 체크포인트는 테스트 세트에서 최상의 성능을 보인것 입니다."
+    "모델을 훈련 할 때 조기 중단(early-stopping)를 사용하기 때문에 훈련이 중단되기 전에 여러 에포크에 대한 테스트 세트에서 모델의 성능이 악화되었을 가능성이 있습니다. 따라서 우리는 마지막으로 저장된 체크포인트를 다시 로드 합니다. 이 체크포인트는 테스트 세트에서 최고의 정확도를 가진 모델입니다."
    ]
   },
   {
@@ -2563,9 +2554,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Performance on Test-Set\n",
+    "## 테스트 세트에 대한 성능\n",
     "\n",
-    "We can now evaluate the model's performance on the test-set. This function expects a batch of data, but we will just use one long time-series for the test-set, so we just expand the array-dimensionality to create a batch with that one sequence."
+    "이제 우리는 테스트 세트에서 모델의 성능을 평가할 수 있습니다. 이 함수는 데이터 배치(batch)를 기대하지만, 우리는 단지 하나의 긴 시계열을 테스트 세트에 사용하기 때문에 배열 차원을 확장하여 하나의 시퀀스로 배치를 만듭니다."
    ]
   },
   {
@@ -2606,11 +2597,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# If you have several metrics you can use this instead.\n",
+    "# 만약 여러가지 측정치를 사용한다면 다음의 방법으로 측정할 수 있습니다.\n",
     "if False:\n",
     "    for res, metric in zip(result, model.metrics_names):\n",
     "        print(\"{0}: {1:.3e}\".format(metric, res))"
@@ -2620,9 +2611,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Generate Predictions\n",
+    "## 예측값을 만들기\n",
     "\n",
-    "This helper-function plots the predicted and true output-signals."
+    "아래의 도움 함수를 통해서 예측된 값과 실제 값을 그래프로 표현해보도록 하겠습니다."
    ]
   },
   {
@@ -2696,16 +2687,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can now plot an example of predicted output-signals. It is important to understand what these plots show, as they are actually a bit more complicated than you might think.\n",
+    "이제 예측 된 출력 신호의 일부를 그래프로 표시할 수 있습니다. 이 그래프가 실제로 무엇을 보여주고 있는지를 이해하는 것이 중요합니다. 실제로는 생각보다 복잡합니다.\n",
     "\n",
-    "These plots only show the output-signals and not the 20 input-signals used to predict the output-signals. The time-shift between the input-signals and the output-signals is held fixed in these plots. The model **always** predicts the output-signals e.g. 24 hours into the future (as defined in the `shift_steps` variable above). So the plot's x-axis merely shows how many time-steps of the input-signals have been seen by the predictive model so far.\n",
+    "이 그래프는 출력 신호만 표시한 것이고 예측을 위해서 학습하는데 사용되었던 20개의 입력 신호를 표시 한것은 아닙니다. 입력 신호와 출력 신호 사이의 시간 이동은 이 플롯에서 고정되어 있습니다. 모델은 **항상** 출력 신호를 예측합니다. 예를 들면, `shift_steps` 변수의 값에 따라서 주어진 시간만큼을 예측할 수 있습니다. 플롯의 x축은 입력 신호의 시간 단계가 예측 모델에게 사용된 양을 표시합니다.\n",
     "\n",
-    "The prediction is not very accurate for the first 30-50 time-steps because the model has seen very little input-data at this point.\n",
-    "The model generates a single time-step of output data for each time-step of the input-data, so when the model has only run for a few time-steps, it knows very little of the history of the input-signals and cannot make an accurate prediction. The model needs to \"warm up\" by processing perhaps 30-50 time-steps before its predicted output-signals can be used.\n",
+    "첫 30-50시간 단계에 대한 예측은 그리 정확하지 않습니다. 왜냐하면, 모델이 이 시점에서 예측을 위해서 주어진 데이터를 충분히 파악할 수 없기 때문입니다.\n",
     "\n",
-    "That is why we ignore this \"warmup-period\" of 50 time-steps when calculating the mean-squared-error in the loss-function. The \"warmup-period\" is shown as a grey box in these plots.\n",
+    "모델은 입력 데이터의 각 시간 단계에 대해 출력 데이터의 단일 시간 단계를 생성하므로 모델이 몇 시간 단계만 예측하는 경우 입력 신호의 내역은 거의 알 수 없으므로 정확한 예측을 하는 것이 불가능합니다. 모델은 예측 된 출력 신호를 사용하기 전에 대략 30-50 시간 단계를 처리하여 \"워밍업\" 해야합니다.\n",
     "\n",
-    "Let us start with an example from the training-data. This is data that the model has seen during training so it should perform reasonably well on this data."
+    "그래서 우리는 손실함수의 평균 제곱 오차를 계산할 때 50번의 시간 간격에 있는 손실값을 이 \"워밍업 기간\"동안에 무시한 것 입니다. \"워밍업 기간\"은 이 플롯에 회색 바탕으로 표시됩니다.\n",
+    "\n",
+    "학습 자료의 예부터 시작해 보겠습니다. 이 데이터는 학습 과정에서 본 데이터이므로 이 데이터에서 합리적으로 잘 수행되어야 합니다."
    ]
   },
   {
@@ -2754,18 +2746,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The model was able to predict the overall oscillations of the temperature quite well but the peaks were sometimes inaccurate. For the wind-speed, the overall oscillations are predicted reasonably well but the peaks are quite inaccurate. For the atmospheric pressure, the overall curve-shape has been predicted although there seems to be a slight lag and the predicted curve has a lot of noise compared to the smoothness of the original signal."
+    "모델은 온도의 전반적인 진동을 아주 잘 예측하고 있지만 때로는 정점에서는 정확한 값을 예측하지 못합니다. 풍속의 경우 전반적인 진동은 비교적 잘 예측되지만 정점에서는 상당히 부정확합니다. 대기압의 경우 전반적인 곡선 형태가 예측되었지만 약간의 지연이있는 것으로 보이고 예측 된 곡선은 원본 신호의 평활도에 비해 많은 잡음을 나타냅니다."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Strange Example\n",
+    "### 이상한 구간\n",
     "\n",
-    "The following is another example from the training-set.\n",
+    "다음은 학습 세트의 또 다른 예입니다.\n",
     "\n",
-    "Note how the temperature does not oscillate very much within each day (this plot shows almost 42 days). The temperature normally oscillates within each day, see e.g. the plot above where the daily temperature-oscillation is very clear. It is unclear whether this period had unusually stable temperature, or if perhaps there's a data-error."
+    "일반적으로 하루 동안의 기온은 그리 크게 변하지 않는다는 점에 유의하면서 아래의 그림을 살펴볼 필요가 있습니다. (이 도표는 약 42일을 보여줍니다). 온도는 매일 매일 높낮이를 반복하며 진동합니다. 학습 데이터에서 하루간의 온도 변화는 매우 명확하고 크게 나타납니다. 이 시기가 비정상적으로 안정된 기온인지 또는 어쩌면 데이터 오류가 있는지 여부는 불분명합니다."
    ]
   },
   {
@@ -2812,7 +2804,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As a check, we can plot this signal directly from the resampled data-set, which looks similar."
+    "확인해보기 위해서 우리는 유사하게 보이는 리샘플링 된 데이터 세트로부터 직접 이 신호를 그래프로 표시해 보았습니다."
    ]
   },
   {
@@ -2849,9 +2841,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can plot the same period from the original data that has not been resampled. It also looks similar.\n",
+    "다시 샘플링되지 않은 원본 데이터와 동일한 기간을 표시 할 수 있습니다. 비슷한 모양입니다.\n",
     "\n",
-    "So either the temperature was unusually stable for a part of this period, or there is a data-error in the raw data that was obtained from the internet weather-database."
+    "따라서 이 기간의 온도는 일부에서 비정상적으로 인터넷 날씨 데이터베이스에서 얻은 원시 데이터에 데이터 오류가 있는 것으로 판단이 됩니다."
    ]
   },
   {
@@ -2891,13 +2883,13 @@
    "source": [
     "### Example from Test-Set\n",
     "\n",
-    "Now consider an example from the test-set. The model has not seen this data during training.\n",
+    "이제 테스트 세트의 예제를 살펴 보겠습니다. 신경망 모델은 학습중에 이 데이터를 본적이 없습니다.\n",
     "\n",
-    "The temperature is predicted reasonably well, although the peaks are sometimes inaccurate.\n",
+    "최고, 최하점은 때로는 부정확하지만 온도는 비교적 잘 예측됩니다.\n",
     "\n",
-    "The wind-speed has not been predicted so well. The daily oscillation-frequency seems to match, but the center-level and the peaks are quite inaccurate. A guess would be that the wind-speed is difficult to predict from the given input data, so the model has merely learnt to output sinusoidal oscillations in the daily frequency and approximately at the right center-level.\n",
+    "풍속은 그렇게 잘 예측되지 않았습니다. 일일 진동 주파수는 일치하는 것처럼 보이지만 중앙 수준과 최고점은 상당히 부정확합니다. 예상되는 입력 데이터로부터 풍속을 예측하기 어렵기 때문에 이 모델은 일간 주파수와 대략 중앙 레벨에서 정현파 진동을 출력하는 것을 배웠습니다.\n",
     "\n",
-    "The atmospheric pressure is predicted reasonably well, except for a lag and a more noisy signal than the true time-series."
+    "대기압은 실제 시계열보다 지연이 있고 실제 노이즈가 있는 경우를 제외하고는 합리적으로 잘 예측됩니다."
    ]
   },
   {
@@ -2946,52 +2938,52 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Conclusion\n",
+    "## 결론\n",
     "\n",
-    "This tutorial showed how to use a Recurrent Neural Network to predict several time-series from a number of input-signals. We used weather-data for 5 cities to predict tomorrow's weather for one of the cities.\n",
+    "이 튜토리얼은 RNN(Recurrent Neural Network)을 사용하여 복수의 입력 신호를 학습하여 여러 시계열을 예측하는 방법을 보여줍니다. 우리는 5개 도시의 날씨 데이터를 사용하여 도시 중 하나의 내일 날씨를 예측했습니다.\n",
     "\n",
-    "It worked reasonably well for predicting the temperature where the daily oscillations were predicted well, but the peaks were sometimes not predicted so accurately. The atmospheric pressure was also predicted reasonably well, although the predicted signal was more noisy and had a short lag. The wind-speed could not be predicted very well.\n",
+    "그것은 매일 진동 패턴이 존재하는 온도 예측에서는 비교적 잘 작동했지만 정점에서의 예측값은 정확하지 않았습니다. 예측 된 신호에 노이즈가 있고 짧은 지연은 있었지만 대기압도 상당히 잘 예측할 수 있었습니다. 하지만 풍속 예측값은 정확하지 않았습니다.\n",
     "\n",
-    "You can use this method with different time-series but you should be careful to distinguish between *causation and correlation* in the data. The neural network may easily discover patterns in the data that are only temporary correlations which do not generalize well to unseen data.\n",
+    "이 방법을 다른 시계열데이터에 적용할 수는 있지만 데이터에서 상관관계에 대해서 주의해야 합니다. 신경망은 일시적 상관관계를 갖는 데이터의 패턴을 쉽게 파악할수는 있지만, 처음 보는 데이터에 대해서 잘 일반화되지는 않습니다.\n",
     "\n",
-    "You should select input- and output-data where a *causal* relationship probably exists. You should have a lot of data available for training, and you should try and reduce the risk of over-fitting the model to the training-data, e.g. using early-stopping as we did in this tutorial."
+    "우리는 학습을 할 때 *상관관계*가 있을 가능성이 있는 입력 및 출력 데이터를 선택해야 합니다. 교육에 사용할 수있는 많은 데이터가 있어야 과적합 문제를 피할 수 있습니다. 이 튜토리얼에서는 과적합 문제를 피하기 위해서 조기 중단 방법을 사용했습니다."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Exercises\n",
+    "## 연습문제\n",
     "\n",
-    "These are a few suggestions for exercises that may help improve your skills with TensorFlow. It is important to get hands-on experience with TensorFlow in order to learn how to use it properly.\n",
+    "TensorFlow로 기술을 향상 시키는데 도움이 될 수있는 몇 가지 제안 사항입니다. TensorFlow를 제대로 사용하는 방법을 배우려면 실습 경험을 쌓는 것이 중요합니다.\n",
     "\n",
-    "You may want to backup this Notebook before making any changes.\n",
+    "변경하기 전에이 노트북을 백업 할 수 있습니다.\n",
     "\n",
-    "* Remove the wind-speed from the target-data. Does it improve prediction for the temperature and pressure?\n",
-    "* Train for more epochs, possibly with a lower learning-rate. Does it improve the performance on the test-set?\n",
-    "* Try a different architecture for the neural network, e.g. higher or lower state-size for the GRU layer, more GRU layers, dense layers before and after the GRU layers, etc.\n",
-    "* Use hyper-parameter optimization from Tutorial #19.\n",
-    "* Try using longer and shorter sequences for the batch-generator.\n",
-    "* Try and remove the city \"Odense\" from the input-signals.\n",
-    "* Try and add last year's weather-data to the input-signals.\n",
-    "* How good is the model at predicting the weather 3 or 7 days into the future?\n",
-    "* Can you train a single model with the output-signals for multiple time-shifts, so that a single model predicts the weather in e.g. 1, 3 and 7 days.\n",
-    "* Explain to a friend how the program works."
+    "* 대상 데이터에서 풍속을 제거하십시오. 그것은 온도와 압력에 대한 예측을 개선합니까?\n",
+    "* 더 낮은 학습률로 더 많은 에포크를 학습해 보세요. 테스트 세트에 대한 정확도가 향상 되었습니까?\n",
+    "* 신경망의 구조를 변경해 보세요. 예를들어, GRU의 갯수를 조정하거나, 계층을 늘려보거나, 완전 연결층을 늘리거나 혹은 앞 뒤로 배치배 볼 수 있습니다.\n",
+    "* 튜토리얼 #19를 참조하여 하이퍼파라미터 최적화를 사용하십시오.\n",
+    "* 배치 생성기에 더 길고 짧은 시퀀스를 사용해 보세요.\n",
+    "* 입력 신호에서 도시 \"Odense\"를 제거해 보세요.\n",
+    "* 작년의 날씨 데이터를 입력 신호에 추가해 보세요.\n",
+    "* 앞으로 3일 또는 7일 날씨를 예측하는 모델은 얼마나 좋은가?\n",
+    "* 하나의 모델이 예를 들어 한 번에 날씨를 예측할 수 있도록 여러 시간 이동에 대한 출력 신호가 있는 단일 모델을 교육 할 수 있습니까? 예를 들어, 1일단위, 3일단위 혹은 일주일 단위 예측을 한번에 할 수 있을까요?\n",
+    "* 프로그램이 어떻게 작동하는지 친구에게 설명하십시오."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## License (MIT)\n",
+    "## 라이센스 (MIT)\n",
     "\n",
-    "Copyright (c) 2018 by [Magnus Erik Hvass Pedersen](http://www.hvass-labs.org/)\n",
+    "저작권 (c) 2018 [Magnus Erik Hvass Pedersen] (http://www.hvass-labs.org/)\n",
     "\n",
-    "Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the \"Software\"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:\n",
+    "사용, 복사, 수정, 병합 할 수있는 권한을 포함하되 이에 국한되지 않고 소프트웨어를 취급하기 위해 이 소프트웨어 및 관련 문서 파일 (이하 \"소프트웨어\")의 사본을 얻는 모든 사람에게 사용 권한이 무료로 부여됩니다. 다음 조건에 따라 소프트웨어의 사본을 게시, 배포, 재 라이센스 및 또는 판매 할 수 있고 소프트웨어를 제공받는 사람에게 허용 할 수 있습니다.\n",
     "\n",
-    "The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.\n",
+    "위의 저작권 고지 및 이 허가 고지는 소프트웨어의 모든 사본 또는 상당 부분에 포함되어야합니다.\n",
     "\n",
-    "THE SOFTWARE IS PROVIDED \"AS IS\", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE."
+    "소프트웨어는 상품성, 특정 목적에의 적합성 및 비 침해에 대한 보증을 포함하여 (단, 이에 한하지 않음) 명시적이거나 묵시적인 어떤 종류의 보증도 없이 \"있는 그대로\" 제공됩니다. 제작자 또는 저작권 보유자는 소프트웨어 또는 사용과 관련하여 발생했거나 발생했거나 발생했거나 또는 기타 행위로 인해 발생한 청구, 기타 책임에 대해 어떠한 경우에도 책임을 지지 않습니다."
    ]
   }
  ],
@@ -3012,7 +3004,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
