--- a/02_Convolutional_Neural_Network.ipynb
+++ b/02_Convolutional_Neural_Network.ipynb
@@ -68,17 +68,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "입력 이미지는 필터 웨이트를 사용하여 첫 번째 컨볼루션 레이어에서 처리됩니다. 결과적으로 16 개의 새로운 이미지가 생성되며, 하나는 컨볼루션 레이어의 각 필터에 해당합니다. 이미지는 또한 다운 샘플링되므로 이미지 해상도가 28x28에서 14x14로 감소합니다.\n",
+    "입력 이미지는 필터 웨이트를 사용하여 첫 번째 컨볼루션 레이어에서 처리됩니다. 결과적으로 16개의 새로운 이미지가 생성되며, 하나는 컨볼루션 레이어의 각 필터에 해당합니다. 이미지는 또한 다운 샘플링되므로 이미지 해상도가 28x28에서 14x14로 감소합니다.\n",
     "\n",
-    "이 16 개의 작은 이미지는 두 번째 컨볼루션 레이어에서 처리됩니다. 이 16 개의 채널마다 필터 가중치가 필요하며 이 레이어의 각 출력 채널에 대해 필터 가중치가 필요합니다. 36 개의 출력 채널이 있으므로 두 번째 컨볼루션 레이어에는 총 16 x 36 = 576 개의 필터가 있습니다. 결과 이미지는 다시 7x7 픽셀로 다운 샘플링됩니다.\n",
+    "이 16개의 작은 이미지는 두 번째 컨볼루션 레이어에서 처리됩니다. 이 16개의 채널마다 필터 가중치가 필요하며 이 레이어의 각 출력 채널에 대해 필터 가중치가 필요합니다. 36개의 출력 채널이 있으므로 두 번째 컨볼루션 레이어에는 총 16 x 36 = 576개의 필터가 사용됩니다. 결과 이미지는 다시 7x7 픽셀로 다운 샘플링됩니다.\n",
     "\n",
-    "두번째 컨볼루션 레이어의 출력은 각각 7x7 픽셀의 36장의 이미지가 됩니다. 그런 다음 길이가 7 x 7 x 36 = 1764 인 단일 벡터로 평탄화되며, 이는 128 개의 뉴런이 있는 완전 연결된 레이어의 입력으로 사용됩니다. 이것은 이미지의 클래스, 즉 어떤 숫자가 이미지에 묘사되어 있는지를 결정하는 데 사용되는 각 클래스에 하나씩, 10 개의 뉴런을 가진 완전히 연결된 또 다른 레이어로 공급됩니다.\n",
+    "두번째 컨볼루션 레이어의 출력은 각각 7x7 픽셀의 36장의 이미지가 됩니다. 그런 다음 길이가 7 x 7 x 36 = 1764인 단일 벡터로 평탄화되며, 이는 128개의 뉴런이 있는 완전 연결된 레이어의 입력으로 사용됩니다. 이것은 이미지의 클래스, 즉 어떤 숫자가 이미지에 묘사되어 있는지를 결정하는데 사용되는 각 클래스에 하나씩, 10개의 뉴런을 가진 완전히 연결된 또 다른 레이어로 공급됩니다.\n",
     "\n",
-    "컨볼루션 필터는 처음에 무작위로 선택되므로 분류가 무작위로 수행됩니다. 입력 이미지의 예측 클래스와 참 클래스 간의 오차는 소위 교차 엔트로피 (cross-entropy)로 측정됩니다. 그런 다음 옵티마이저가 미분의 체인 규칙을 사용하여 컨볼루션 네트워크를 통해, 이 오류를 자동으로 전파하고 분류 오류를 개선하기 위해 필터 가중치를 업데이트합니다. 이것은 분류 오류가 충분히 낮을 때까지 반복적으로 수천 번 반복됩니다.\n",
+    "컨볼루션 필터는 처음에 무작위로 선택되므로 분류가 무작위로 수행됩니다. 입력 이미지의 예측 클래스와 참 클래스 간의 오차는 소위 교차 엔트로피 (cross-entropy)로 측정됩니다. 그런 다음 옵티마이저가 미분의 체인 규칙을 사용하여 컨볼루션 네트워크를 통해, 이 오류를 자동으로 역전파하고 분류 오류를 개선하기 위해 필터 가중치를 업데이트합니다. 이것은 분류 오류가 충분히 낮을 때까지 반복적으로 수천번 반복됩니다.\n",
     "\n",
     "이 특정 필터 가중치와 중간 이미지는 한 번의 최적화 실행 결과이며이 노트북을 다시 실행하면 다르게 보일 수 있습니다.\n",
     "\n",
-    "TensorFlow의 계산은 실제로 단일 이미지 대신 이미지 일괄 처리로 수행되므로 계산이 더 효율적입니다. 즉, TensorFlow에서 구현 될 때 순서도에는 실제로 하나 이상의 데이터 차원이 있습니다."
+    "TensorFlow의 계산은 실제로 단일 이미지 대신 이미지 일괄 처리로 수행되므로 계산이 더 효율적입니다. 즉, TensorFlow에서 구현될 때 순서도에는 실제로 하나 이상의 데이터 차원이 있습니다."
    ]
   },
   {
@@ -92,11 +92,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "다음 차트는 첫 번째 컨볼루션 레이어에서 이미지를 처리하는 기본적인 아이디어를 보여줍니다. 입력 이미지는 숫자 7을 나타내며 이미지 사본 4 개가 여기에 표시되므로 필터가 이미지의 다른 위치로 어떻게 이동되고 있는지 명확하게 볼 수 있습니다. 필터의 각 위치에 대해, 필터와 필터 아래의 이미지 픽셀간에 내적이 계산되므로 출력 이미지에 단일 픽셀이 생성됩니다. 따라서 전체 입력 이미지에서 필터를 이동하면 새로운 이미지가 생성됩니다.\n",
+    "다음 그림은 첫 번째 컨볼루션 레이어에서 이미지를 처리하는 기본적인 아이디어를 보여줍니다. 입력 이미지는 숫자 7을 나타내며 이미지 사본 4개가 여기에 표시되므로 필터가 이미지의 다른 위치로 어떻게 이동되고 있는지 명확하게 볼 수 있습니다. 필터의 각 위치에 대해, 필터와 필터 아래의 이미지 픽셀간에 내적이 계산되므로 출력 이미지에 단일 픽셀이 생성됩니다. 따라서 전체 입력 이미지에서 필터를 이동하면 새로운 이미지가 생성됩니다.\n",
     "\n",
-    "적색 필터 가중치는 필터가 입력 이미지의 검은 픽셀에 대해 긍정적 인 반응을 나타내지 만 파란색 픽셀은 필터가 검은 픽셀에 대해 부정적인 반응을한다는 것을 의미합니다.\n",
+    "적색 필터 가중치는 필터가 입력 이미지의 검은 픽셀에 대해 긍정적인 반응을 나타내지만 파란색 픽셀은 필터가 검은 픽셀에 대해 부정적인 반응을 한다는 것을 의미합니다.\n",
     "\n",
-    "이 경우 필터는 출력 이미지의 해당 라인에 대한 강한 반응에서 볼 수 있듯이 7 자리의 수평선을 인식합니다.\n"
+    "이 경우 필터는 출력 이미지의 해당 라인에 대한 강한 반응에서 볼 수 있듯이 7자리의 수평선을 인식합니다.\n"
    ]
   },
   {
@@ -2435,7 +2435,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
