Korean Translation, Proof reading

--- a/01_Simple_Linear_Model.ipynb
+++ b/01_Simple_Linear_Model.ipynb
@@ -19,7 +19,7 @@
     "\n",
     "이 튜토리얼은 간단한 선형 모델로 TensorFlow를 사용하는 기본 워크플로우를 보여줍니다. 많이 알려진 MNIST 데이터 세트에 손글씨로 작성된 숫자의 이미지를 로드 한 후 TensorFlow에서 간단한 수학 모델을 정의하고 최적화합니다. 그 결과를 시각화하고 설명합니다.\n",
     "\n",
-    "기본 선형대수, 파이썬 및 Jupyter Notebook 편집기에 익숙해야합니다. 또한 머신러닝 및 분류에 대한 기본적인 지식이 있으면 많은 도움이 됩니다."
+    "기본 선형대수, 파이썬 및 Jupyter Notebook 편집기에 익숙해야 합니다. 또한 머신러닝 및 분류에 대한 기본적인 지식이 있으면 많은 도움이 됩니다."
    ]
   },
   {
@@ -82,7 +82,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "MNIST 데이터 세트는 약 12MB이며 주어진 경로에 위치하지 않으면 자동으로 다운로드됩니다."
+    "MNIST 데이터 세트는 약 12MB이며 주어진 경로에 파일이 없으면 자동으로 다운로드 됩니다."
    ]
   },
   {
@@ -110,7 +110,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "MNIST 데이터 세트는 현재 로드 되었으며 70.000개의 이미지 및 관련 라벨 (즉, 이미지의 분류)로 구성됩니다. 데이터 집합은 3개의 상호 배타적인 하위 집합으로 나뉩니다. 이 튜토리얼에서는 훈련 및 테스트 세트 만 사용합니다."
+    "MNIST 데이터 세트를 읽어들이면 70,000개의 이미지와 각 이미지의 라벨(즉, 이미지의 분류)로 구성됩니다. 데이터 집합은 3개의 상호 배타적인 하위 집합으로 나뉩니다. 이 튜토리얼에서는 훈련 및 테스트 세트만 사용합니다."
    ]
   },
   {
@@ -147,7 +147,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "데이터 세트는 원 핫 (One-Hot) 인코딩으로 로드되었습니다. 즉, 숫자형의 레이블이 존재하는 모든 종류의 수와 동일한 벡터로 변환되었음을 의미합니다. 벡터의 모든 요소는 해당 인덱스를 제외하고는 모두 0의 값을 가집니다. 예를 들어, 테스트 세트의 처음 5 개 이미지에 대한 One-Hot로 인코딩 된 레이블은 다음과 같습니다."
+    "데이터 세트는 원 핫 (One-Hot) 인코딩으로 읽어들였습니다. 즉, 숫자형의 레이블이 존재하는 모든 종류의 수와 동일한 벡터로 변환되었음을 의미합니다. 벡터의 모든 요소는 해당 인덱스를 제외하고는 모두 0의 값을 가집니다. 예를들어, 테스트 세트의 처음 5개 이미지에 대한 One-Hot로 인코딩 된 레이블은 다음과 같습니다."
    ]
   },
   {
@@ -230,7 +230,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "데이터 차원은 아래 소스 코드의 여러 위치에서 사용됩니다. 컴퓨터 프로그래밍에서 일반적으로 숫자가 사용될 때마다 특정 숫자를 하드 코딩하지 않고 변수와 상수를 사용하는 것이 가장 좋습니다. 즉, 숫자는 한 곳에서 변경해야합니다. 이상적으로 이것은 읽은 데이터로부터 유추 될 것이지만 여기서 우리는 숫자를 씁니다."
+    "데이터 차원은 아래 소스 코드의 여러 위치에서 사용됩니다. 컴퓨터 프로그래밍에서 일반적으로 숫자가 사용될 때마다 특정 숫자를 하드 코딩하지 않고 변수와 상수를 사용하는 것이 가장 좋습니다. 즉, 숫자는 한 곳에서 변경해야 합니다. 이상적으로는 읽은 데이터로부터 알아낼수도 있지만 여기서는 편의상 숫자를 직접 기술하였습니다."
    ]
   },
   {
@@ -354,7 +354,7 @@
     "* 비용: 변수들을 최적화 하기 위해서 사용되는 측정값 입니다.\n",
     "* 최적화 기법: 모델의 변수를 변경합니다.\n",
     "\n",
-    "또한 TensorFlow 그래프는 다양한 디버깅 문을 포함 할 수 있습니다. 이 노트북에서는 다루지 않지만 TensorBoard를 사용하여 데이터를 표시하도록 로깅합니다."
+    "또한 TensorFlow 그래프는 다양한 디버깅 문을 포함할 수 있습니다. 이 노트북에서는 다루지 않지만 TensorBoard를 사용하여 데이터를 표시하도록 로그를 기록합니다."
    ]
   },
   {
@@ -368,9 +368,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Placeholder 변수는 그래프를 입력 할 때마다 그래프를 실행할 때마다 변경 될 수 있습니다. 이 값을 Placeholder 변수에 넣고 이것을 아래에서 더 자세히 설명합니다.\n",
+    "Placeholder 변수는 그래프를 실행할 때 마다 그래프에 주어질 입력의 값을 변경할 수 있도록 도와주는 변수입니다. 우리는 이것을 placeholder에 공급한다고 하며, 아래 코드에서 사용법을 확인할 수 있습니다.\n",
     "\n",
-    "먼저 입력 이미지의 자리 Placeholder 변수를 정의합니다. 이를 통해 TensorFlow 그래프에 입력되는 이미지를 변경할 수 있습니다. 이것은 일명 텐서 (tensor)라고 불리는데, 이는 단지 그것이 다차원 벡터 또는 행렬이라는 것을 의미합니다. 데이터 형은`float32`로 설정되고 형태는`[None, img_size_flat]`으로 설정됩니다. 여기서`None`은 텐서가 임의의 수의 이미지를 보유 할 수 있음을 의미합니다. 각 이미지는 길이가`img_size_flat` 인 벡터입니다. ."
+    "먼저 입력 이미지를 위한 Placeholder 변수를 정의합니다. 이러한 방법을 통해서 TensorFlow 그래프에 입력되는 이미지를 변경할 수 있습니다. 이러한 것들을 일명 텐서 (tensor)라고 부르는데, 이들은 모두 다차원 벡터 또는 행렬이라는 것을 의미합니다. 데이터 형은 `float32`로 설정되고 형태는`[None, img_size_flat]`으로 설정됩니다. 여기서`None`은 텐서가 임의의 수의 이미지를 보유 할 수 있음을 의미합니다. 각 이미지는 길이가 `img_size_flat`인 벡터입니다. ."
    ]
   },
   {
@@ -1364,7 +1364,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
