--- a/01_Simple_Linear_Model.ipynb
+++ b/01_Simple_Linear_Model.ipynb
@@ -431,9 +431,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "위에 정의되고 모델에 입력 데이터를 입력하는 역할을 하는 Placeholder 변수 외에 TensorFlow가 변경해야하는 모델 변수가 있으므로 모델이 훈련 데이터에서 더 잘 수행되도록 합니다.\n",
+    "정의된 모델에 데이터를 공급하는 역할을 하는 Placeholder변수 외에, TensorFlow가 반드시 변경해야 하는, 모델 변수라는 것이 있습니다. 이러한 변경을 통해서 모델이 학습 데이터에 대해서 더 잘 예측하게 만들 수 있습니다.\n",
     "\n",
-    "최적화되어야 하는 첫 번째 변수는`weights`라고 불리우며 TensorFlow 변수로 정의됩니다. TensorFlow 변수는 0으로 초기화 되어야 하며 모양은`[img_size_flat, num_classes]`이어야하므로 2차원 텐서 (또는 행렬)이고 `img_size_flat`행과 `num_classes` 열이 있습니다."
+    "최적화되어야 하는 첫 번째 변수는 `weights`라고 불리우며 TensorFlow 변수로 정의됩니다. TensorFlow 변수는 0으로 초기화 되어야 하며 모양은`[img_size_flat, num_classes]`이어야 하므로 2차원 텐서 (또는 행렬)이고 `img_size_flat`행과 `num_classes` 열이 있습니다."
    ]
   },
   {
@@ -451,7 +451,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "최적화되어야하는 두 번째 변수는 '편향(biases)'이라고 불리우며 길이가 num_classes 인 1 차원 텐서 또는 벡터로 정의됩니다."
+    "최적화되어야 하는 두 번째 변수는 `bias`이라고 불리우며 길이가 `num_classes`인 1차원 텐서 또는 벡터로 정의됩니다."
    ]
   },
   {
@@ -476,7 +476,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "여기서 사용 할 수학 모델은 `placeholder` 변수 `x`의 이미지에 `weights`를 곱한 다음 bias를 더합니다.\n",
+    "여기서 사용 할 수학 모델은 `placeholder` 변수 `x`의 이미지에 `weights`를 곱한 다음 `bias`를 더합니다.\n",
     "\n",
     "결과는 형태가 `[num_images, num_classes]`인 행렬이 됩니다. `x`의 형태가 `[num_images, img_size_flat]`이고 `weights`는 형태가 `[img_size_flat, num_classes]`이기 때문에 두 행렬의 곱셈은 `[num_images, num_classes]` 모양을 가진 행렬을 만들고 그 행렬에 `biases` 벡터를 더하게 됩니다.\n",
     "\n",
@@ -498,7 +498,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "이제`logits`는`num_images`행과`num_classes`열이 있는 행렬입니다. $i$'번째 행과 $j$'번째 열의 요소는 $i$'번째 입력 이미지가 $j$'번째의 클래스가 될 예상 가능성을 나타냅니다.\n",
+    "이제 `logits`는 `num_images`행과 `num_classes`열이 있는 행렬입니다. $i$'번째 행과 $j$'번째 열의 요소는 $i$'번째 입력 이미지가 $j$'번째의 클래스가 될 예상 가능성을 나타냅니다.\n",
     "\n",
     "그러나 이러한 추정치는 숫자가 매우 작거나 커서 해석하기가 어렵습니다. 이를 정규화하여 `logits` 행렬의 각 행이 하나가 되고, 각 요소가 0과 1사이의 값이 되도록 합니다. 이것은 softmax 함수를 사용하여 계산되며 결과는 `y_pred`에 저장됩니다."
    ]
@@ -518,7 +518,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The predicted class can be calculated from the `y_pred` matrix by taking the index of the largest element in each row.\n"
+    "예상값 클래스 번호는 `y_pred`행렬을 계산해서 얻을 수 있는데, 각 행의 가장 큰 항목의 색인값을 구해서 사용하면 됩니다."
    ]
   },
   {
@@ -543,9 +543,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "모델이 입력 이미지를 더 잘 분류하도록 만들려면 'weights'와 'biases'변수를 어떻게 든 변경해야 합니다. 이를 위해 우리는 모델 `y_pred`의 예측 된 출력을 원하는 출력 `y_true`와 비교하여 모델이 현재 얼마나 잘 수행되는지를 알아야합니다.\n",
+    "모델이 입력 이미지를 더 잘 분류하도록 만들려면 `weights`와 `biases`변수를 어떻게 든 변경해야 합니다. 이를 위해 우리는 모델 `y_pred`의 예측 된 출력을 원하는 출력 `y_true`와 비교하여 모델이 현재 얼마나 잘 수행되는지를 알아야 합니다.\n",
     "\n",
-    "교차 엔트로피는 분류에 사용되는 성능 측정 값입니다. 교차 엔트로피는 항상 양의 연속 함수이며 모델의 예측 된 출력이 원하는 출력과 정확히 일치하면 교차 엔트로피는 0입니다. 그러므로 최적화의 목표는 교차 엔트로피를 최소화하여 모델의 '가중치'와 '편향'을 변경하여 가능한 한 0에 가까워지도록 하는 것입니다.\n",
+    "교차 엔트로피는 분류에 사용되는 성능 측정 값입니다. 교차 엔트로피는 항상 양의 연속 함수이며 모델의 예측 된 출력이 원하는 출력과 정확히 일치하면 교차 엔트로피는 0입니다. 그러므로 최적화의 목표는 교차 엔트로피를 최소화하여 모델의 `weights`와 `bias`을 변경하여 최대한 0에 가까워지도록 하는 것입니다.\n",
     "\n",
     "TensorFlow에는 교차 엔트로피 계산을 위한 내장 함수가 있습니다. 내부적으로 softmax를 계산하기 때문에 `logits`의 값을 사용합니다."
    ]
